Update Purchase Data - Cohort Based Retention Rate Analysis.ipynb

--- a/Purchase Data - Cohort Based Retention Rate Analysis.ipynb
+++ b/Purchase Data - Cohort Based Retention Rate Analysis.ipynb
@@ -9164,7 +9164,7 @@
     "Retention is the key for creating a sustainable business. \n",
     "It shows long term engagement of your most loyal users - and that’s a strong sign of a product/market fit. \n",
     "It influences how much revenue will each cohort produce over time and therefore what would be the lifetime value.\n",
-    "##### Higher retention = more recurring paying users.\n",
+    "##### Higher retention = more recurring paying customers.\n",
     "\n"
    ]
   },
@@ -10443,6 +10443,13 @@
     "plt.title('Retention Rate')\n",
     "sns.heatmap(data=Retention_Table ,annot = True,fmt = '.0%',vmin = 0.0,vmax = 0.5,cmap=\"inferno\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### We can see that the retention rate of most of the cohorts improved in Nov,2011 as compared to the previous months."
    ]
   },
   {
